src/Test/Fixtures/Good/TypeQualifier/scratchExtraWhitespaceTypedQubit.lf
let  scratch  q:  qubit  =  qalloc();
