src/Test/Fixtures/Bad/BitQubit/missingColonBeforeQubitType.lf
let q qubit = qalloc(1);